--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@alpinejs/collapse": "^3.13.8",
+        "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
