--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-sluggable": "^3.6"
+        "spatie/laravel-sluggable": "^3.6",
+        "stripe/stripe-php": "^14.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
