--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "vue": "^3.4.21",
+    "vue-chartjs": "^4.1.2",
     "vue-router": "^4.3.0",
     "vuex": "^4.1.0"
   },
