--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@ckeditor/ckeditor5-vue": "^5.1.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "sortablejs": "^1.15.2",
+    "sortablejs-vue3": "^1.2.11",
     "uuid": "^9.0.1",
     "vue": "^3.4.21",
     "vue-chartjs": "^4.1.2",
