--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "@ckeditor/ckeditor5-vue": "^5.1.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "save": "^2.9.0",
     "sortablejs": "^1.15.2",
     "sortablejs-vue3": "^1.2.11",
     "uuid": "^9.0.1",
     "vue": "^3.4.21",
     "vue-chartjs": "^4.1.2",
     "vue-router": "^4.3.0",
+    "vue3-treeselect": "^0.1.10",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
